# better-stopwatch

./: Cargo.toml  readme.md
.github/workflows/: rust.yml
src/: lib.rs
tests/: lib.rs
